--- a/index.html
+++ b/index.html
@@ -56,31 +56,16 @@
                <h2>Work Experience</h2>
                <div class= "content-box-details">
                   <div class="content-box-detail">
-                     <h3>Short term trainee </h3>
-                     <h4>Delphi TVS </h4>
+                     <h3>Intern trainee </h3>
+                     <h4>Fabevy Technology</h4>
                      <div>
-                        <span class="highlight-text-1">08/2020 - 06/2021</span>
+                        <span class="highlight-text-1">09/2021 - present</span>
                         <span class="highlight-text-1">Chennai</span>
                      </div>
-                     <div>
-                        <span class="highlight-text-1">Achievements/Task</span>              
+                     <div>             
                      </div>
                      <ul>
-                        <li>Responsible for the various process in heat treatment department such as LPC ( low pressure carburising, chemical blackening, thermal method of deburring) and various knowledge about the processes</li>
-                     </ul>
-                  </div>
-                  <div class="content-box-detail">
-                     <h3>Assistant technician  </h3>
-                     <h4>TATA motors </h4>
-                     <div>
-                        <span class="highlight-text-1">05/2019 - 07/2019</span>
-                        <span class="highlight-text-1">Tirunelveli</span>
-                     </div>
-                     <div>
-                        <span class="highlight-text-1">Achievements/Task</span>              
-                     </div>
-                     <ul>
-                        <li>General services, problem identiﬁcation and engine assembly for LMV commercial vehicles with senior technician</li>
+                        <li>Trainee in febevy technologies,doing the assigned project works in web designing using html and css</li>
                      </ul>
                   </div>
                </div>
@@ -99,24 +84,6 @@
                </div>
             </div>
             <div class="content-box">
-               <h2>Certificates</h2>
-               <div class="content-box-details">
-                  <div class="content-box-detail">
-                     <h5>Prodigy workshop on Ansys and Creo (10/2018)</h5>
-                     <span class="highlight-text-2">Basics of the softwares and tools</span>
-                  </div>
-                  <div class="content-box-detail">
-                     <h5>3D Printing (09/2018)</h5>
-                     <span class="highlight-text-2">Evloution of 3D printers and the usage of 3D printers in the current world </span>
-                  </div>
-                  <div class="content-box-detail">
-                     <h5>Recent trends in automobile engineering 2k18 (02/2018)</h5>
-                     <span class="highlight-text-2">A workshop about automobile basics , current trends and ﬁfth wheel drive
-                     </span>
-                  </div>
-               </div>
-            </div>
-            <div class="content-box">
                <h2>Languages</h2>
                <div class="content-box-details">
                   <div class="content-box-detail">
@@ -125,11 +92,7 @@
                   </div>
                   <div class="content-box-detail">
                      <h5>English</h5>
-                     <span class="highlight-text-2">Advanced in speaking and writing</span>
-                  </div>
-                  <div class="content-box-detail">
-                     <h5>Hindi</h5>
-                     <span class="highlight-text-2">Beginner in speaking and writing</span>
+                     <span class="highlight-text-2">speaking and writing</span>
                   </div>
                </div>
             </div>
