--- a/layout.html
+++ b/layout.html
@@ -4,33 +4,138 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prawin</title>
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/layout.css"> 
 </head>
 <body>
     <div class="header">
         <div class="container">
-            <div class="fc">
-                <div class="fi w-80">Praveen</div>
-                <div class="fi w-20">Image</div>
-            </div>
+           <div class="fc">
+               <div class="fi col-10">
+                 <div class="header-left">
+                    <h1>Praveen Nagaraj</h1>
+                    <h3>Electronics & Instrumentation</h3>
+                     <p>To secure a challenging position in a reputable organization to expand my learnings, knowledge, and skills.
+                        Secure a responsible career opportunity to fully utilize my training and skills, while making a significant contribution to the success of the company.
+                     </p>
+                 </div>
+               </div>
+               <div class="fi col-2">
+                 <div class="header-right">
+                    <img src="images/my-pic.jpg" alt="">
+                 </div>
+               </div>
+           </div>
         </div>
     </div>
-    <div class="contact">
+    <div class="contacts">
         <div class="container">
             <div class="fc jc-center">
-                <div class="fi"><a href="">Email</a></div>
-                <div class="fi"><a href="">Phone</a></div>
-                <div class="fi"><a href="">Location</a></div>
+                <div class="fi"><a href="praveenneymar20@gmail.com">praveenneymar20@gmail.com</a></div>
+                <div class="fi"><a href="tel:9884315897">9884315897</a></div>
+                <div class="fi"><a href="https://www.google.com/maps/place/Anna+Nagar,+Thanjavur,+Tamil+Nadu+613001/@10.7686171,79.1360059,15z/data=!3m1!4b1!4m5!3m4!1s0x3baab8f2a72b3ae7:0x80df5b015f59a181!8m2!3d10.7685963!4d79.1447607">Thanjavur, India</a></div>
             </div>
         </div>
     </div>
     <div class="main-section">
         <div class="container">
             <div class="fc">
-                <div class="fi w-50">Left Content</div>
-                <div class="fi w-50">Right Content</div>
+                <div class="fi col-6">
+                    <div id="left">
+                        <div class="content-box">
+                          <h2>EDUCATION</h2>
+                          <div class="content-box-details">
+                            <div class="content-box-detail">
+                              <h3>BE-Electronic & Instrumentation</h3>
+                              <h4>JEPPIAAR ENGINEERING COLLEGE,CHENNAI </h4>
+                              <div class="highlight-text-1">
+                                <span class="highlights">07/2015 - 05/2019</span>
+                                <span class="highlights">6.67</span>
+                              </div>
+                            </div>
+                            <div class="content-box-detail">
+                              <h3>H S C</h3>
+                              <h4>St' Antony's Higher Secondary school,Thanjavur</h4>
+                              <div class="highlight-text-1">
+                                <span class="highlights">05/2014</span>
+                                <span class="highlights">88.4%</span>
+                              </div>
+                            </div>
+                            <div class="content-box-detail">
+                              <h3>S S L C</h3>
+                              <h4>St' Antony's Higher Secondary school,Thanjavur</h4>
+                              <div class="highlight-text-1">
+                                <span class="highlights">04/2012</span>
+                                <span class="highlights">80.4%</span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="content-box">
+                            <h2>WORK EXPERIENCE</h2>
+                            <div class="content-box-details">
+                                  <div class="content-box-detail">
+                                    <h3>Intern trainee</h3>
+                                    <h4>Fabevy technologies</h4>
+                                      <div class="highlight-text-3">
+                                        <span class="highlights">09/2021-present</span>
+                                        <span class="highlights">chennai</span>
+                                      </div>
+                                      <div>
+                                        <span class="highlights">Responsibilities/tasks</span>
+                                      </div>
+                                      <div class="list">
+                                      <ul>
+                                        <li>Trainee in febevy technologies,doing the assigned project works in web designing using html and css.</li> 
+                                      </ul>
+                                    </div>
+                                  </div>
+                           </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="fi col-6">
+                    <div id="right">
+                        <div class="content-box">
+                          <h2>SOFT SKILLS</h2>
+                          <div class="content-box-tags">
+                            <span class="content-box-tag">HTML</span>
+                            <span class="content-box-tag">CSS</span>
+                            <span class="content-box-tag">JS</span>
+                            <span class="content-box-tag">Efficient</span>
+                            <span class="content-box-tag">keen listener</span>
+                          </div>
+                        </div>
+                        <div class="content-box">
+                          <h2>LANGUAGES</h2>
+                          <div class="content-box-details">
+                            <div class="content-box-detail-l2">
+                              <h4>Tamil</h4>
+                              <div>
+                                <span class="highlight-text-2">Mother tongue</span>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="content-box-details">
+                            <div class="content-box-detail-l2">
+                              <h4>English</h4>
+                              <div>
+                                <span class="highlight-text-2">Speaking and writing</span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="content-box">
+                          <h2>INTERESTS</h2>
+                          <div class="content-box-tags">
+                            <span class="content-box-tag-1">Playing Football</span>
+                            <span class="content-box-tag-1">Waching Football</span>
+                            <span class="content-box-tag-1">Swimming</span>
+                          </div>
+                        </div>
+                      </div>
+                </div>
             </div>
         </div>
     </div>
